--- a/BE/Api/Dockerfile
+++ b/BE/Api/Dockerfile
@@ -26,4 +26,4 @@ RUN dotnet publish "./EstateAgency.csproj" -c $BUILD_CONFIGURATION -o /app/publi
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "EstateAgency.dll"]
+ENTRYPOINT ["dotnet", "Api.dll"]
