--- a/FE/angular.json
+++ b/FE/angular.json
@@ -36,8 +36,7 @@
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
               "src/assets/vendor/aos/aos.js",
               "src/assets/vendor/swiper/swiper-bundle.min.js",
-              "src/assets/vendor/purecounter/purecounter_vanilla.js",
-              "src/assets/js/main.js"
+              "src/assets/vendor/purecounter/purecounter_vanilla.js"
             ],
             "server": "src/main.server.ts",
             "prerender": true,
@@ -107,8 +106,7 @@
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
               "src/assets/vendor/aos/aos.js",
               "src/assets/vendor/swiper/swiper-bundle.min.js",
-              "src/assets/vendor/purecounter/purecounter_vanilla.js",
-              "src/assets/js/main.js"
+              "src/assets/vendor/purecounter/purecounter_vanilla.js"
             ]
           }
         }
