--- a/BE/Api/Properties/launchSettings.json
+++ b/BE/Api/Properties/launchSettings.json
@@ -7,7 +7,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "dotnetRunMessages": true,
+      "dotnetRunMessages": false,
       "applicationUrl": "https://localhost:7257;http://localhost:5222"
     },
     "IIS Express": {
